# CapsUnlocked

./: .gitignore  CMakeLists.txt  README.md  agents.md  architecture.md  capsunlocked.ini  features.md  plan.md  run.sh  test.sh
.github/workflows/: windows.yml
_codeql_build_dir/: DartConfiguration.tcl  caps_core_tests
experiments/capslock-vim/: CMakeLists.txt  main.cpp  run.sh
experiments/mac-block-keys/: CMakeLists.txt  main.cpp  run.sh
src/: app.cpp  config.cpp  config.h  hook.cpp  hook.h  input.cpp  input.h  macos_main.cpp  platform.h  util.cpp  util.h  windows_main.cpp
src/core/: app_context.cpp  app_context.h  logging.cpp  logging.h  string_utils.h
src/core/config/: config_loader.cpp  config_loader.h
src/core/layer/: layer_controller.cpp  layer_controller.h
src/core/mapping/: mapping_engine.cpp  mapping_engine.h
src/core/overlay/: overlay_model.cpp  overlay_model.h
src/platform/macos/: app_monitor.cpp  app_monitor.h  event_tag.h  keyboard_hook.cpp  keyboard_hook.h  output.cpp  output.h  overlay_view.cpp  overlay_view.h  platform_app.cpp  platform_app.h
src/platform/windows/: app_monitor.cpp  app_monitor.h  keyboard_hook.cpp  keyboard_hook.h  output.cpp  output.h  overlay_view.cpp  overlay_view.h  platform_app.cpp  platform_app.h
tests/core/: config_loader_test.cpp  hello_test.cpp  layer_controller_test.cpp  mapping_engine_test.cpp
